texi2html/test/invalid/res_info/texi_node_too_much_arguments/node_too_much_arguments.texi
\input texinfo @c -*-texinfo-*-

@setfilename node_too_much_arguments.info

@node Top
@top Top

@menu
* node::
@end menu

@node node,,,,too much arg

@bye
